<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sixteen_dp">

    <TextView
        android:id="@+id/tv_add_playlist_title"
        android:layout_width="@dimen/text_view_width"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-regular"
        android:text="@string/add_playlist"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/add_playlist_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_playlist_name"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_playlist_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_name_hint" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        style="@style/falt_button"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:gravity="center"
        android:text="@string/add_button_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_playlist_name" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/falt_button"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:gravity="center"
        android:text="@string/cancel_button_text"
        app:layout_constraintRight_toLeftOf="@+id/button_add"
        app:layout_constraintTop_toBottomOf="@+id/til_playlist_name" />

</android.support.constraint.ConstraintLayout>